name:                DevUtils-FS
version:             0.1.0.0
synopsis:            FS helpers
homepage:            https://github.com/adarqui/DevUtils-FS
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.FS
  build-depends:       base ==4.7.*, bytestring ==0.10.4.0, transformers, directory, filepath, DevUtils-Base
  GHC-Options:         -Wall -rtsopts -XOverloadedStrings
  hs-source-dirs:      src
